syntax = "proto3";

package ClassLibrary.Messages.Protobuf;

import "Classes.proto";

option csharp_namespace = "ClassLibrary.Messages.Protobuf";

message Input {
  string AgentId = 1; // UUIDs are represented as strings in proto
  
  ClassLibrary.Messages.Protobuf.Coordinates AgentLocation = 2;
  ClassLibrary.Messages.Protobuf.Coordinates MouseLocation = 3;
  repeated GameKey KeyInput = 4;
  
  double GameTime = 5;
}

enum GameKey {
  Up = 0;
  Down = 1;
  Left = 2;
  Right = 3;
  Attack = 4;
  Interact = 5;
}