syntax = "proto3";

package ClassLibrary.Messages.Protobuf;

import "Classes.proto";

option csharp_namespace = "ClassLibrary.Messages.Protobuf";

message Collision_M {
  string EntityId = 1; // UUIDs are represented as strings in Protobuf
  EntityType EntityType = 2;
  ClassLibrary.Messages.Protobuf.Coordinates_M FromLocation = 3;
  ClassLibrary.Messages.Protobuf.Coordinates_M ToLocation = 4;
  ClassLibrary.Messages.Protobuf.Coordinates_M Direction = 5;
  double LastUpdate = 6;
  string EventId = 7;
  double TTL = 8;
}

enum EntityType {
  Player = 0;
  Bullet = 1;
  Ai = 2;
}